--- a/activity/templates/base_bs.html
+++ b/activity/templates/base_bs.html
@@ -6,22 +6,24 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     {% block title %}<title>Docent</title>{% endblock %}
     {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+
+    <!--Glyphicons-->
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!--Bootstrap-->
+    <link rel=”stylesheet” href=”https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> <link
+        rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+
+    <!--Custom-->
     <link rel="stylesheet" href="{% static 'css/bs.css' %}" type="text/css">
+
 </head>
 
 <body>
     {% block header%}
     <nav class="navbar navbar-expand-lg navbar-light bg-light ">
 
-        <a class="navbar-brand" href="#">Docent</a>
+        <a class="navbar-brand" href="{% url 'index' %}">Docent</a>
         <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,20 +31,20 @@
 
         <div class="collapse navbar-collapse ml-auto" id="navbarToggler">
 
-            <form class="form-inline ml-auto mr-auto">
+            <form class="form-inline ml-auto mr-auto" type="get" action="." id="search">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <a id="search_submit" href="#" onclick="document.getElementById('search').submit();"><i class="fa fa-search"></i></a>
             </form>
 
             <ul class="navbar-nav ml-auto">
                 {% if user.is_authenticated %}
 
                 <li class="nav-item">
-                        <a class="nav-link" href="#">Sign In</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Sign Up</a>
-                    </li>
+                    <a class="nav-link" href="#">Sign In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sign Up</a>
+                </li>
                 {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="#">Sign In</a>
@@ -56,13 +58,23 @@
     </nav>
     <div class="jumbotron"></div>
     <nav class="nav nav-pills nav-fill">
-            <a class="nav-item nav-link active" href="#">Active</a>
-            <a class="nav-item nav-link" href="#">Link</a>
-            <a class="nav-item nav-link" href="#">Link</a>
-            <a class="nav-item nav-link disabled" href="#">Disabled</a>
-          </nav>
+        <a class="nav-item nav-link active" href="{% url 'category'%}?type=entertainment">Entertainment</a>
+        <a class="nav-item nav-link" href="{% url 'category'%}?type=music">Music</a>
+        <a class="nav-item nav-link" href="{% url 'category'%}?type=food">Food and Drink</a>
+        <a class="nav-item nav-link" href="{% url 'category'%}?type=sports">Sports</a>
+        <a class="nav-item nav-link" href="{% url 'category'%}?type=other">Other</a>
+    </nav>
     {% endblock %}
     {% block content %}{% endblock %}
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+<script src="{% static 'js/app.js' %}" type="text/javascript"></script>
 
 </html>
