--- a/activity/templates/index_bs.html
+++ b/activity/templates/index_bs.html
@@ -12,8 +12,11 @@
                         <h5 class="card-title">{{activity.name}}</h5>
                         <h6 class="card-subtitle mb-2 text-muted">{{ activity.address_1 }}</h6>
                         <p class="card-text">{{ activity.phone_number }}</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        {% if activity in saved_list %}
+                        <a class="card-link likebutton" href="#" data-catid="{{ activity.ID }}"><i class="fa fa-star"></i></a>
+                        {% else %}
+                        <a class="card-link likebutton" href="#" data-catid="{{ activity.ID }}"><i class="fa fa-star-o"></i></a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
